testsuite/tests/grammar/invalid_parserless/unref_error_node.lkt
import lexer_example

@with_lexer(foo_lexer)
grammar foo_grammar {
    @main_rule main_rule <- ExampleNode(@example)
}

@abstract class FooNode implements Node[FooNode] {
}

class ExampleNode : FooNode implements TokenNode {
}

class ParserlessNode : FooNode implements ErrorNode {
}
